--- a/Carniceria/src/app/app.component.html
+++ b/Carniceria/src/app/app.component.html
@@ -2,7 +2,9 @@
 <nav id="menu">
   <ul>
     <li><a [routerLink]="['/inicio']">Inicio</a></li>
-
+    <li><a [routerLink]="['/ingresarCarne']">Ingresar una carne</a></li>
+    <li><a [routerLink]="['/carnes']">Todas las carnes</a></li>
+    <li><a [routerLink]="['/contacto']">Contacto</a></li>
   </ul>
 </nav>
 <section id="content">
