--- a/Carniceria/src/app/components/detalle-carne/detalle-carne.component.html
+++ b/Carniceria/src/app/components/detalle-carne/detalle-carne.component.html
@@ -1,4 +1,4 @@
-<h2>DETALLE DE LAS CARNES DISPONIBLES</h2>
+<h2>DETALLE DE LA CARNES </h2>
 <div class="container" *ngIf="carne">
     <div class="imagen" *ngIf="carne.imagen">
         <img src="{{url+'get-imagen/'+carne.imagen}}" *ngIf="carne.imagen">
